--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    
-    {% if title %}
-        <title>Flask Blog - {{ title }}</title>
-    {% else %}
-        <title>Flask Blog</title>
-    {% endif %}
+{% extends "layout.html" %}
+{% block content %}
 
-</head>
-<body>
     <h1>About Page</h1>
-    
-</body>
-</html>
+
+{% endblock content %}
